crawl_v2.log
/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/crawler.ts(95,22): error TS2379: Argument of type '{ url: string; title: string; breadcrumbs: string[]; content: string; parentUrl: string | undefined; nextUrl: string | undefined; prevUrl: string | undefined; relatedUrls: string[]; lastScraped: string; }' is not assignable to parameter of type 'DocNode' with 'exactOptionalPropertyTypes: true'. Consider adding 'undefined' to the types of the target's properties.
  Types of property 'parentUrl' are incompatible.
    Type 'string | undefined' is not assignable to type 'string'.
      Type 'undefined' is not assignable to type 'string'.

    at createTSError (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (/Users/ben/Gemini/Forcepoint-Mindmapper/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2379 ]
}
